Fix storage box overflow in <500px mediaquery

--- a/style.css
+++ b/style.css
@@ -59,13 +59,13 @@ ul li {
     height: 40px;
     list-style: none;
     margin-left: 10px;
-    width: 100%;
+    width: 95%;
 }
 #new-quality-input {
     background-color: #e9e9f3;
     border: 2px solid #353567;
     border: none;
-    height: 20%;
+    height: 35px;
     margin-bottom: 10px;
     margin-left: 3px;
     width: 98%;
@@ -79,6 +79,9 @@ ul li {
     margin-top: 15px;
     padding: 0px;
     width: 100%;
+}
+.menu-button:hover {
+    background-color: #353567;
 }
 
 /*Idea Box Section*/
@@ -117,9 +120,9 @@ ul li {
         border: 2px solid #353567;
         color: #ffffff;
         height: 10%;
-        margin: 1% 0%;
         width: 100%;
         margin: 3% 0%;
+        font-size: 16px;
     }
     #ideabox-save-button.enable {
         background: #3f3f88;
@@ -141,17 +144,16 @@ ul li {
         border: 2px solid #353567;
         border-left: none;
         float: right;
-        height: 25px;
+        height: 30px;
         width: 100%;
     }
     #search-button {
         border: 2px solid #353567;
         box-sizing: border-box;
         border-right: none;
-        height: 25px;
+        height: 30px;
         width: 25px;
-        
-    }
+        }
 
 /*Storage Box Section*/
 
@@ -169,8 +171,8 @@ ul li {
     grid-column-end: 3;
     background-color: #eaeaf4;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: space-around;
+    align-content: space-around;
     flex-wrap: wrap;
 }
 .hidden {
@@ -190,7 +192,7 @@ img{
 	height: 250px;
     width: 45%;
     min-width: 40%;
-	margin: auto;
+    margin: 10px 0px;
 }
 
 .idea-card-top{
@@ -293,15 +295,14 @@ ul li {
     background: #3f3f88;
     outline: none;
     }
-#ideabox-save-button.enable:hover {
-    background: #5356A4;
-    outline: none;
-    }
 #ideabox-search-input {
     border: 2px solid #353567;
     height: 25px;
     width: 90%;
     }
+#search-button {
+    height: 25px;
+    }       
 .initial-prompt {
     font-size: 16px;
     }
@@ -328,7 +329,7 @@ body {
     flex-direction: column;
     }
 #menu-bar {
-    height: 500px;
+    min-height: 450px;
     display: flex;
     }
 h1 {
@@ -348,11 +349,15 @@ ul li {
     font-size: 9px;
     height: 30px;
 }
+.menu-button:hover {
+    font-size: 9px;
+    height: 30px;
+}
 #idea-box {
     background-color: #a9aad2;
     display: flex;
     justify-content: center;
-    height: 500px;
+    min-height: 350px;
 }
 #ideabox-form {
     font-size: 20px;
@@ -397,13 +402,14 @@ ul li {
     border: 2px solid #353567;
     height: 25px;
     width: 100%;
-    }
+    }  
 .initial-prompt {
     font-size: 16px;
     }
 #storage-box {
-    height: 500px;
-    justify-content: center;
+    min-height: 700px;
+    align-content: flex-start;
+    overflow: auto;
     }
 .idea-card{
     height: 40%;
